// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRequestContext Возвращает корректный объект со всеми полями 1`] = `
Object {
  "absoluteOfferPosition": 1,
  "cardViewType": 3,
  "eventPlace": 10,
  "pageNumber": 1,
  "queryInfo": Object {
    "queryId": "cce63354dbe464c7baee8b7de82bcfd8",
    "queryText": "/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
  },
  "rereferer": "https://realty.test.vertis.yandex.ru/moskva_i_moskovskaya_oblast/kupit/novostrojka/",
  "totalResults": 10,
  "webReferer": "https://realty.test.vertis.yandex.ru/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
}
`;

exports[`getRequestContext Возвращает корректый объект (должен быть без дефолтов) 1`] = `
Object {
  "absoluteOfferPosition": undefined,
  "cardViewType": 3,
  "eventPlace": 10,
  "pageNumber": undefined,
  "queryInfo": Object {
    "queryId": "cce63354dbe464c7baee8b7de82bcfd8",
    "queryText": "/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
  },
  "rereferer": undefined,
  "totalResults": undefined,
  "webReferer": "https://realty.test.vertis.yandex.ru/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
}
`;
